add and delete lease
